calc.jjt

PARSER_BEGIN(ExprParser)
import java.io.*;

public class ExprParser
{
    public static void main(String [] args) throws Exception
    {

    Reader sr = new StringReader(args[0]);
    ExprParser calc = new ExprParser(sr);

    try {
      SimpleNode node = calc.Program();
      node.dump(">");
    }



    catch (ParseException ex) {
      ex.printStackTrace();
    }


    }
}
PARSER_END(ExprParser)

SKIP : {
   <IGNORE : [" " , "\n"]> |
   <SINGLELINECOMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| < NEWLINE: ["\n", "\r"] >
}
SKIP :
{
  "/*" : WithinComment

}
<WithinComment> SKIP :
{
  "*/" : DEFAULT

}

<WithinComment> MORE :
{
  <~[]>
}

TOKEN:
{

<SPECIALSYMBOL: "~"  | "@" | "%" | "^" |
 "?"  | "." | "\'"  | "<<" | ">>" | "|=" | "%="|
"&=" | "^="   | "<<=" | ">>=" |"\""   >
{ debugStream.println("SPECIAL SYMBOL : " + matchedToken.image); }
|
<SSAnd: "&">
{ debugStream.println("SS And : " + matchedToken.image); }
|
<SSOr: "|">
{ debugStream.println("SS Or : " + matchedToken.image); }
|
<SSNot: "!">
{ debugStream.println("SS Not : " + matchedToken.image); }
|
<SSL: "<">
{ debugStream.println("SS Less than : " + matchedToken.image); }
|
<SSLE: "<=">
{ debugStream.println("SS Less than equals : " + matchedToken.image); }
|
<SSG: ">">
{ debugStream.println("SS Greater than : " + matchedToken.image); }
|
<SSGE: ">=">
{ debugStream.println("SS Greater than equals : " + matchedToken.image); }
|
<SSNE: "!=">
{ debugStream.println("SS Not equal to : " + matchedToken.image); }
|
<SSPlus: "+">
{ debugStream.println("SS Plus : " + matchedToken.image); }
|
<SSMinus: "-">
{ debugStream.println("SS Minus : " + matchedToken.image); }
|
<SSStar: "*">
{ debugStream.println("SS Star: " + matchedToken.image); }
|
<SSDivide: "/">
{ debugStream.println("SS Divide : " + matchedToken.image); }
|
<SSplusplus: "++">
{ debugStream.println("SS Plus_plus : " + matchedToken.image); }
|
<SSminusminus: "--">
{ debugStream.println("SS Minus_minus : " + matchedToken.image); }
|
<SSSemiColon: ";">
{ debugStream.println("SS SemiColon : " + matchedToken.image); }
|
<SSPlusEquals: "+=">
{ debugStream.println("SS Plus_equals : " + matchedToken.image); }
|
<SSMinusEquals: "-=">
{ debugStream.println("SS Minus_equals : " + matchedToken.image); }
|
<SSMultEquals: "*=">
{ debugStream.println("SS Mult_equals : " + matchedToken.image); }
|
<SSDivideEquals: "/=">
{ debugStream.println("SS Divide_equals : " + matchedToken.image); }
|
<SSEquals: "=">
{ debugStream.println("SS Equals : " + matchedToken.image); }
|

<SSOpenParen : "(">
{ debugStream.println("SS Open Parenthesis : " + matchedToken.image); }
|
<SSCloseParen : ")">
{ debugStream.println("SS Close Parenthesis  : " + matchedToken.image); }
|
<SSOpenBraces : "{">
{ debugStream.println("SS Open Braces: " + matchedToken.image); }
|
<SSCloseBraces : "}">
{ debugStream.println("SS Close Braces  : " + matchedToken.image); }
|
<SSOpenBracket : "[">
{ debugStream.println("SS Open Bracket: " + matchedToken.image); }
|
<SSCloseBracket : "]">
{ debugStream.println("SS Close Bracket  : " + matchedToken.image); }
|
<ComparisonEquals : "==">
{ debugStream.println("ComparisonEquals : " + matchedToken.image); }
|
<SSComma : ",">
{ debugStream.println("Comma : " + matchedToken.image); }
|
<SSColon : ":">
{ debugStream.println("Colon : " + matchedToken.image); }
}

TOKEN : {
 <RESERVEDWORDPROCEDURE :"Procedure ::">
{ debugStream.println("RESERVEDWORD Prodcedure token:" + matchedToken.image  ); }
| <RESERVEDWORDIF :"if">
{ debugStream.println("RESERVEDWORD IF token:" + matchedToken.image  ); }
 |<RESERVEDWORDBREAK :"break">
{ debugStream.println("RESERVEDWORD BREAK token:" + matchedToken.image  ); }
 |<RESERVEDWORDELSE :"else">
{ debugStream.println("RESERVEDWORD ELSE token:" + matchedToken.image  ); }
 |<RESERVEDWORDELSEIF :"elseif">
{ debugStream.println("RESERVEDWORD ELSEIF token:" + matchedToken.image  ); }
 |<RESERVEDWORDRETURN :"return">
{ debugStream.println("RESERVEDWORD RETURN token:" + matchedToken.image  ); }
 |<RESERVEDWORDCASE :"case">
{ debugStream.println("RESERVEDWORD CASE token:" + matchedToken.image  ); }
|<RESERVEDWORDSWITCH :"switch">
{ debugStream.println("RESERVEDWORD SWITCH token:" + matchedToken.image  ); }
|<RESERVEDWORDWHILE :"while">
{ debugStream.println("RESERVEDWORD WHILE token:" + matchedToken.image  ); }
 |<RESERVEDWORDFOR :"for">
{ debugStream.println("RESERVEDWORD FOR token:" + matchedToken.image  ); }

 |<RESERVEDWORDTRUE :"true">
{ debugStream.println("RESERVEDWORD TRUE token:" + matchedToken.image  ); }
 |<RESERVEDWORDFALSE :"false">
{ debugStream.println("RESERVEDWORD FALSE token:" + matchedToken.image  ); }
|<RESERVEDWORDINT :"int">
{ debugStream.println("RESERVEDWORD INTEGER token:" + matchedToken.image  ); }
 |<RESERVEDWORDFLOAT :"float">
{ debugStream.println("RESERVEDWORD FLOAT token:" + matchedToken.image  ); }
|<RESERVEDWORDBOOLEAN :"boolean">
{ debugStream.println("RESERVEDWORD BOOLEAN token:" + matchedToken.image  ); }
|<RESERVEDWORDDOUBLE :"double">
{ debugStream.println("RESERVEDWORD DOUBLE token:" + matchedToken.image  ); }
|<RESERVEDWORDSTRING :"string">
{ debugStream.println("RESERVEDWORD STRING token:" + matchedToken.image  ); }
|<RESERVEDWORDHASHMAP :"hashmap">
{ debugStream.println("RESERVEDWORD HASHMAP token:" + matchedToken.image  ); }
|<RESERVEDWORDSET :"set">
{ debugStream.println("RESERVEDWORD CASE Set:" + matchedToken.image  ); }
 |<RESERVEDWORDLIST :"list">
{ debugStream.println("RESERVEDWORD LIST token:" + matchedToken.image  ); }
 |<RESERVEDWORDNEW :"new">
{ debugStream.println("RESERVEDWORD NEW token:" + matchedToken.image  ); }

| <IDENTIFIER : <LETTER> (<LETTER> | <DIGIT> )*>
{ debugStream.println("IDENTIFIER token: " + matchedToken.image); }
|
<STRING:(<SINGLEQUOTE>|<DOUBLEQUOTE>)(<LETTER>|<DIGIT>|(<IGNORE>)*|<SPECIALSYMBOL> |<IGNORE> (<SINGLEQUOTE>|<DOUBLEQUOTE>))*  >
{ debugStream.println("STRING token:" + matchedToken.image  ); }
|<INTEGER: <DECIMALINTEGER>|<OCTALINTEGER>|<HEXINTEGER>>
{debugStream.println("INTEGER token: " + matchedToken.image);}
 | <DECIMALINTEGER : <NONZERO> (<DIGIT> )*>
{ debugStream.println("DECIMAL INTEGER token: " + matchedToken.image); }
 | <OCTALINTEGER : <ZERO>(<OCTALS> )*>
{ debugStream.println("OCTAL INTEGER token: " + matchedToken.image); }
 | <HEXINTEGER : "0"("x"|"X")(<DIGIT>|<HEXLETTERS>)(<DIGIT>|<HEXLETTERS> )*>
{ debugStream.println("HEXADECIMAL INTEGER token: " + matchedToken.image); }
| <REALNUMBER : (<DIGIT>(<DIGIT>)* ("."|"")(<DIGIT>)* ("e"|"E"|"")("+"|"-"|"")(<DIGIT>)*)>
{ debugStream.println("REALNUMBER: " + matchedToken.image); }
| <REAL_NUMBER : ("."(<DIGIT>)* ("e"|"E"|"")("+"|"-"|"")(<DIGIT>)*)>
{ debugStream.println("REALNUMBER: " + matchedToken.image); }

 | <#SINGLEQUOTE:["\'"]>
 | <#DOUBLEQUOTE:["\""]>
 | <#HEXLETTERS:["A"-"F","a"-"f"]>
 | <#DIGIT  : ["0"-"9"]>
 | <#NONZERO  : ["1"-"9"]>
 | <#LETTER : ["a"-"z","A"-"Z","_"]>
 | <#OCTALS: ["0"-"7"]>
 | <#ZERO : ["0"]>

}



SimpleNode Program() : {}
{
<RESERVEDWORDPROCEDURE> <SSOpenBraces> (IfPart() | SwitchPart()|Statement()| DataTypes() )* <SSCloseBraces>
{
return jjtThis;
}

}
void PrimitiveType(): {}
{
  <RESERVEDWORDINT>|<RESERVEDWORDSTRING>|<RESERVEDWORDDOUBLE>|<RESERVEDWORDFLOAT>|<RESERVEDWORDBOOLEAN>


}

void Expr(): {}
{
   SimpleExpr() ( (<SSL>|<SSLE>|<SSG>|<SSGE>|<ComparisonEquals>) SimpleExpr() )*
   


}
void SimpleExpr(): {}
{
  (<SSMinus>)? Term() ((<SSPlus>|<SSMinus>|<SSOr>) Term() )*

}
void Term (): {}
{
  Factor() ( (<SSStar>|<SSDivide>|<SSAnd>) Factor() )*


}

void Factor(): {}
{
    <IDENTIFIER>|(<INTEGER>|<REALNUMBER>|<REAL_NUMBER>)|<STRING>|(<SSNot>Factor())| (<SSOpenParen> Expr() <SSCloseParen>) |<RESERVEDWORDTRUE>|<RESERVEDWORDFALSE>
   

}
void Statement(): {}
{
   LOOKAHEAD(3)IncrementStatement()|LOOKAHEAD(3)DecrementStatement()|LOOKAHEAD(3)Assignment()|Declaration()|LOOKAHEAD(2)PlusEqualsStatement()|LOOKAHEAD(2)MinusEqualsStatement()|LOOKAHEAD(2)DivideEqualsStatement()|StarEqualsStatement()


}
void IfPart() : {}
{
  <RESERVEDWORDIF> <SSOpenParen> (Expr()) <SSCloseParen> <SSOpenBraces> (Statement())* <SSCloseBraces> (ElseIfPart())* (ElsePart())?


}

void ElseIfPart() : {}
{
 <RESERVEDWORDELSEIF> <SSOpenParen> (Expr()) <SSCloseParen><SSOpenBraces>  (Statement())* <SSCloseBraces>


}

void ElsePart() : {}
{
 <RESERVEDWORDELSE> <SSOpenBraces>  (Statement())* <SSCloseBraces>


}




void Literal() : {}
{
	<INTEGER>|<REALNUMBER>|<REAL_NUMBER>|<STRING>
	

}



void SwitchPart() : {}
{
     <RESERVEDWORDSWITCH> <SSOpenParen> <IDENTIFIER><SSComma>(ComparisonOperator()) <SSCloseParen><SSOpenBraces>  (Cases())+ <SSCloseBraces>
	

}
void ComparisonOperator() : {}
{
 <SSAnd>|<SSOr>|<SSNot>|<ComparisonEquals>|<SSL>|<SSLE>|<SSG>|<SSGE>|<SSNE>


}
void Cases() : {}
{
	<RESERVEDWORDCASE> (Expr()) <SSColon> <SSOpenBraces> (LOOKAHEAD(3)Declaration()|Assignment())* <SSCloseBraces>
	

}
void Assignment() : {}
{
  (<IDENTIFIER><SSEquals> (Expr()) <SSSemiColon>)


}

void Declaration(): {}
{
   PrimitiveType() (LOOKAHEAD(2)(Assignment()) |(<IDENTIFIER> (<SSComma> <IDENTIFIER>)*  <SSSemiColon> ) )


}


void IncrementStatement(): {Token t;}
{
   t = <IDENTIFIER><SSplusplus><SSSemiColon>
   {jjtThis.setImage(t.image);}

}
void DecrementStatement(): {Token t;}
{
   t = <IDENTIFIER><SSminusminus><SSSemiColon>
   {jjtThis.setImage(t.image);}

}
void PlusEqualsStatement(): {Token t;}
{
   t = <IDENTIFIER> <SSPlusEquals>(<IDENTIFIER>|<INTEGER>) <SSSemiColon>
}

void MinusEqualsStatement():{Token t;}
{
t = <IDENTIFIER> <SSMinusEquals> (<IDENTIFIER>|<INTEGER>)<SSSemiColon>
}
void StarEqualsStatement(): {Token t;}
{
t = <IDENTIFIER> <SSMultEquals> (<IDENTIFIER>|<INTEGER>)<SSSemiColon>
}
void DivideEqualsStatement(): {Token t;}
{
t = <IDENTIFIER> <SSDivideEquals>(<IDENTIFIER>|<INTEGER>)<SSSemiColon>
}

void DataTypes() : {}
{
(Hashmap()| List() | Set())


}
void Hashmap (): {Token t;}
{
 t = <RESERVEDWORDHASHMAP> <IDENTIFIER> (<SSOpenBracket> <INTEGER> <SSCloseBracket> <SSEquals> <INTEGER>| <SSEquals><RESERVEDWORDNEW>) <SSSemiColon>
}
void Set (): {Token t;}
{
t =  <RESERVEDWORDSET> <IDENTIFIER> (<SSOpenBracket> <INTEGER> <SSCloseBracket> <SSEquals> <INTEGER>|<SSEquals> <RESERVEDWORDNEW> <SSOpenBracket> <INTEGER> <SSCloseBracket>) <SSSemiColon>
}
void List (): {Token t;}
{
t =  <RESERVEDWORDLIST> <IDENTIFIER> (<SSOpenBracket> <INTEGER> <SSCloseBracket> <SSEquals> <INTEGER>|<SSEquals>  <RESERVEDWORDNEW> <SSOpenBracket> <INTEGER> <SSCloseBracket>) <SSSemiColon>
}
