src/ExprParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. ExprParser.java */
import java.io.*;

public class ExprParser/*@bgen(jjtree)*/implements ExprParserTreeConstants, ExprParserConstants {/*@bgen(jjtree)*/
  protected static JJTExprParserState jjtree = new JJTExprParserState();public static void main(String [] args) throws Exception
    {

   java.io.FileReader sr= new java.io.FileReader(args[0]);
    ExprParser calc = new ExprParser(sr);

    try {
      SimpleNode node = calc.Program();
      node.dump(">");
    }



    catch (ParseException ex) {
      ex.printStackTrace();
    }


    }

  static final public SimpleNode Program() throws ParseException {
    trace_call("Program");
    try {
                        /*@bgen(jjtree) Program */
  SimpleNode jjtn000 = new SimpleNode(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RESERVEDWORDPROCEDURE);
        jj_consume_token(SSOpenBraces);
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDIF:
          case RESERVEDWORDSWITCH:
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
          case RESERVEDWORDHASHMAP:
          case RESERVEDWORDSET:
          case RESERVEDWORDLIST:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDIF:
            IfPart();
            break;
          case RESERVEDWORDSWITCH:
            SwitchPart();
            break;
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
          case IDENTIFIER:
            Statement();
            break;
          case RESERVEDWORDHASHMAP:
          case RESERVEDWORDSET:
          case RESERVEDWORDLIST:
            DataTypes();
            break;
          default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(SSCloseBraces);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
{if (true) return jjtn000;}
      } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
      } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("Program");
    }
  }

  static final public void PrimitiveType() throws ParseException {
    trace_call("PrimitiveType");
    try {
                       /*@bgen(jjtree) PrimitiveType */
  SimpleNode jjtn000 = new SimpleNode(JJTPRIMITIVETYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RESERVEDWORDINT:
          jj_consume_token(RESERVEDWORDINT);
          break;
        case RESERVEDWORDSTRING:
          jj_consume_token(RESERVEDWORDSTRING);
          break;
        case RESERVEDWORDDOUBLE:
          jj_consume_token(RESERVEDWORDDOUBLE);
          break;
        case RESERVEDWORDFLOAT:
          jj_consume_token(RESERVEDWORDFLOAT);
          break;
        case RESERVEDWORDBOOLEAN:
          jj_consume_token(RESERVEDWORDBOOLEAN);
          break;
        default:
          jj_la1[2] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("PrimitiveType");
    }
  }

  static final public void Expr() throws ParseException {
    trace_call("Expr");
    try {
              /*@bgen(jjtree) Expr */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        SimpleExpr();
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSL:
          case SSLE:
          case SSG:
          case SSGE:
          case ComparisonEquals:
            ;
            break;
          default:
            jj_la1[3] = jj_gen;
            break label_2;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSL:
            jj_consume_token(SSL);
            break;
          case SSLE:
            jj_consume_token(SSLE);
            break;
          case SSG:
            jj_consume_token(SSG);
            break;
          case SSGE:
            jj_consume_token(SSGE);
            break;
          case ComparisonEquals:
            jj_consume_token(ComparisonEquals);
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          SimpleExpr();
        }
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("Expr");
    }
  }

  static final public void SimpleExpr() throws ParseException {
    trace_call("SimpleExpr");
    try {
                    /*@bgen(jjtree) SimpleExpr */
  SimpleNode jjtn000 = new SimpleNode(JJTSIMPLEEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SSMinus:
          jj_consume_token(SSMinus);
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
        Term();
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSOr:
          case SSPlus:
          case SSMinus:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_3;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSPlus:
            jj_consume_token(SSPlus);
            break;
          case SSMinus:
            jj_consume_token(SSMinus);
            break;
          case SSOr:
            jj_consume_token(SSOr);
            break;
          default:
            jj_la1[7] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          Term();
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("SimpleExpr");
    }
  }

  static final public void Term() throws ParseException {
    trace_call("Term");
    try {
               /*@bgen(jjtree) Term */
  SimpleNode jjtn000 = new SimpleNode(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        Factor();
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSAnd:
          case SSStar:
          case SSDivide:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_4;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SSStar:
            jj_consume_token(SSStar);
            break;
          case SSDivide:
            jj_consume_token(SSDivide);
            break;
          case SSAnd:
            jj_consume_token(SSAnd);
            break;
          default:
            jj_la1[9] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          Factor();
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Term");
    }
  }

  static final public void Factor() throws ParseException {
    trace_call("Factor");
    try {
                /*@bgen(jjtree) Factor */
  SimpleNode jjtn000 = new SimpleNode(JJTFACTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          jj_consume_token(IDENTIFIER);
          break;
        case INTEGER:
        case REALNUMBER:
        case REAL_NUMBER:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INTEGER:
            jj_consume_token(INTEGER);
            break;
          case REALNUMBER:
            jj_consume_token(REALNUMBER);
            break;
          case REAL_NUMBER:
            jj_consume_token(REAL_NUMBER);
            break;
          default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          break;
        case STRING:
          jj_consume_token(STRING);
          break;
        case SSNot:
          jj_consume_token(SSNot);
          Factor();
          break;
        case SSOpenParen:
          jj_consume_token(SSOpenParen);
          Expr();
          jj_consume_token(SSCloseParen);
          break;
        case RESERVEDWORDTRUE:
          jj_consume_token(RESERVEDWORDTRUE);
          break;
        case RESERVEDWORDFALSE:
          jj_consume_token(RESERVEDWORDFALSE);
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("Factor");
    }
  }

  static final public void Statement() throws ParseException {
    trace_call("Statement");
    try {
                   /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        if (jj_2_1(3)) {
          IncrementStatement();
        } else if (jj_2_2(3)) {
          DecrementStatement();
        } else if (jj_2_3(3)) {
          Assignment();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
            Declaration();
            break;
          default:
            jj_la1[12] = jj_gen;
            if (jj_2_4(2)) {
              PlusEqualsStatement();
            } else if (jj_2_5(2)) {
              MinusEqualsStatement();
            } else if (jj_2_6(2)) {
              DivideEqualsStatement();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IDENTIFIER:
                StarEqualsStatement();
                break;
              default:
                jj_la1[13] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("Statement");
    }
  }

  static final public void IfPart() throws ParseException {
    trace_call("IfPart");
    try {
                 /*@bgen(jjtree) IfPart */
  SimpleNode jjtn000 = new SimpleNode(JJTIFPART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RESERVEDWORDIF);
        jj_consume_token(SSOpenParen);
        Expr();
        jj_consume_token(SSCloseParen);
        jj_consume_token(SSOpenBraces);
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[14] = jj_gen;
            break label_5;
          }
          Statement();
        }
        jj_consume_token(SSCloseBraces);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDELSEIF:
            ;
            break;
          default:
            jj_la1[15] = jj_gen;
            break label_6;
          }
          ElseIfPart();
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case RESERVEDWORDELSE:
          ElsePart();
          break;
        default:
          jj_la1[16] = jj_gen;
          ;
        }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("IfPart");
    }
  }

  static final public void ElseIfPart() throws ParseException {
    trace_call("ElseIfPart");
    try {
                     /*@bgen(jjtree) ElseIfPart */
  SimpleNode jjtn000 = new SimpleNode(JJTELSEIFPART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RESERVEDWORDELSEIF);
        jj_consume_token(SSOpenParen);
        Expr();
        jj_consume_token(SSCloseParen);
        jj_consume_token(SSOpenBraces);
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[17] = jj_gen;
            break label_7;
          }
          Statement();
        }
        jj_consume_token(SSCloseBraces);
      } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
      } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
      }
    } finally {
      trace_return("ElseIfPart");
    }
  }

  static final public void ElsePart() throws ParseException {
    trace_call("ElsePart");
    try {
                   /*@bgen(jjtree) ElsePart */
  SimpleNode jjtn000 = new SimpleNode(JJTELSEPART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(RESERVEDWORDELSE);
        jj_consume_token(SSOpenBraces);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case RESERVEDWORDINT:
          case RESERVEDWORDFLOAT:
          case RESERVEDWORDBOOLEAN:
          case RESERVEDWORDDOUBLE:
          case RESERVEDWORDSTRING:
          case IDENTIFIER:
            ;
            break;
          default:
            jj_la1[18] = jj_gen;
            break label_8;
          }
          Statement();
        }
        jj_consume_token(SSCloseBraces);
      } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
      } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
      }
    } finally {
      trace_return("ElsePart");
    }
  }

  static final public void Literal() throws ParseException {
    trace_call("Literal");
    try {
                  /*@bgen(jjtree) Literal */
  SimpleNode jjtn000 = new SimpleNode(JJTLITERAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INTEGER:
          jj_consume_token(INTEGER);
          break;
        case REALNUMBER:
          jj_consume_token(REALNUMBER);
          break;
        case REAL_NUMBER:
          jj_consume_token(REAL_NUMBER);
          break;
        case STRING:
          jj_consume_token(STRING);
          break;
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Literal");
    }
  }
